--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -9,14 +9,11 @@ google-ID: ''
 menu:
 - {name: 'About',   url: 'about.html'}
 - {name: 'Contact', url: 'contact.html'}
+- {name: 'Posts', url: 'posts.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'github',     link: 'https://www.github.com/lenpaul'}
-- {icon: 'twitter',    link: 'https://twitter.com/paululele'}
-- {icon: 'linkedin',   link: 'http://www.linkedin.com/in/lenpaul/'}
-- {icon: 'envelope',   link: 'mailto:l.nguyen.paul@gmail.com'}
-- {icon: 'rss-square', link: '/feed.xml'}
+- {icon: 'github',     link: 'https://www.github.com/chris-langfield'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
 
 # Customize site text
